# court-audio

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.design-sync/: SOURCE.md  config.json  conventions.md
.github/workflows/: ci.yml  package-domestic.yml  release.yml
docs/: admin_guide.md  architecture.md  auth.md  backlog.md  configuration.md  export_package.md  first_run_offline.md  hardware.md  operator_guide.md  os_integration.md  packaging.md  recommendations.md  registry-checklist.md  status.md  ui_adaptive.md
docs/samples/: settings.autonomous_offline.json
promts/: 00_infra.md  01_audio_core.md  02_recorder_reliability.md  03_store_integrity.md  04_ui_capture.md  05_case_binding_offline.md  06_sync_agent.md  07_backend_integration.md  08_packaging.md  09_multichannel.md  10_1_playback.md  10_2_export.md  10_3_auth.md  10_4_settings_roles.md  10_5_ui_adaptive.md  10_6_ux_polish.md  10_markers_realtime.md  11_gost_signing.md  12_video.md  13_1_ui_fixes.md  13_2_multichannel_monitor.md  13_3_mirror_structure.md  13_4_export_player_stall.md  13_5_gates_failsecure.md  13_6_offline_pin_and_overlay.md  13_7_flac_memory_and_segment_encryption.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: export_demo.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/audio/: capture.rs  convert.rs  devices.rs  mod.rs  ring.rs  sync.rs  tracks.rs
src-tauri/src/export/: audio.rs  audit.rs  burn_windows.ps1  dvd.rs  flac.rs  html.rs  manifest.rs  mod.rs  package.rs  player_template.html
src-tauri/src/integrity/: annotations.rs  events.rs  hash.rs  mod.rs
src-tauri/src/ipc/: admin_cmds.rs  audio_cmds.rs  auth_cmds.rs  case_cmds.rs  export_cmds.rs  marker_cmds.rs  mod.rs  player_cmds.rs  query_cmds.rs  selftest_cmds.rs  settings_gate.rs  sync_cmds.rs  ui_cmds.rs
src-tauri/src/player/: audit.rs  mod.rs  source.rs  state.rs  timeline.rs
src-tauri/src/recorder/: journal.rs  mod.rs  multitrack.rs  recovery.rs  segment_writer.rs  session.rs
src-tauri/src/reliability/: device_monitor.rs  disk_monitor.rs  mirror.rs  mod.rs  watchdog.rs
src-tauri/src/store/: admin_pin.rs  annotations.rs  auth_cache.rs  case_binding.rs  case_cache.rs  crypto.rs  db.rs  export.rs  manifest.rs  mod.rs  operator_profile.rs  reconcile.rs  retention.rs  session_comment.rs  settings_audit.rs
src-tauri/src/sync/: auth.rs  client.rs  docket.rs  mod.rs  queue.rs  scheduler.rs  testkit.rs  uploader.rs  verify.rs
src-tauri/tests/: capture_pipeline.rs  encrypted_atrest.rs  flac_memory.rs  gates_failsecure.rs  mirror_structure.rs  monitor_preview.rs  multichannel_capture.rs  packaging_manifest.rs  recovery_killtest.rs  reliability_sim.rs  sync_resume.rs
src-tauri/webview2/: README.md
src/components/: CasePicker.test.tsx  CasePicker.tsx  CompactOverlay.test.tsx  CompactOverlay.tsx  HallMode.test.tsx  HallMode.tsx  SelfTest.test.tsx  SelfTest.tsx
src/design/: BlockHead.tsx  Button.tsx  Card.tsx  Checkbox.tsx  CriticalNotice.tsx  EmptyState.tsx  Field.tsx  Icon.tsx  InfoTip.tsx  ParagraphMark.tsx  ProgressBar.tsx  Select.tsx  Skeleton.tsx  Tag.tsx  control-height.test.tsx  index.ts  patterns.ts
src/lib/: alerts.test.ts  alerts.ts  auth-context.tsx  core.ts  errors.test.ts  errors.ts  format.ts  player-status.tsx  recording-status.test.tsx  recording-status.tsx  session-filter.test.ts  session-filter.ts  settings.ts  window-route.test.ts  window-route.ts
src/screens/: Administration.test.tsx  Administration.tsx  Diagnostics.test.tsx  Diagnostics.tsx  Export.test.tsx  Export.tsx  Login.test.tsx  Login.tsx  Playback.test.tsx  Playback.tsx  Record.gate.test.tsx  Record.test.tsx  Record.tsx  SessionCard.tsx  Sessions.test.tsx  Sessions.tsx  Settings.test.tsx  Settings.tsx  Setup.tsx  list-field.test.tsx  settings-common.tsx
src/shell/: AppShell.test.tsx  AppShell.tsx  ConfirmDialog.tsx  useCloseGuard.ts
src/styles/: globals.css  tokens.css
src/test/: exportPlayerTemplate.test.ts  fixtures.ts  setup.ts  tauriMock.ts
