[package]
name = "court-audio"
version = "0.2.0"
description = "«Аудиопротокол» — модуль аудиопротоколирования судебных заседаний"
authors = ["Аудиопротокол"]
edition = "2021"
rust-version = "1.77"

# Имя библиотеки ядра (UI вызывает команды через Tauri IPC).
[lib]
name = "court_audio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon (этап 10.5): системный трей со статусом записи (deliverable 2).
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Этап 01 (audio_core): захват звука и WAV-кодирование ─────────────────────
# Ресемпл частоты в v1 не делаем (пишем на нативной частоте устройства),
# поэтому rubato не подключаем — см. promts/01_audio_core.md, deliverable 3.
cpal = "0.15"
hound = "3.5"

# ── Этап 02 (recorder_reliability): контроль свободного места ─────────────────
# Кроссплатформенный замер свободного места (Linux/Windows/macOS) без ОС-хардкода.
fs2 = "0.4"

# ── Этап 03 (store_integrity): манифест, целостность, шифрование at-rest ──────
# SQLite-манифест (WAL) — bundled, без системного libsqlite (импортозамещение).
rusqlite = { version = "0.32", features = ["bundled"] }
# SHA-256 сегментов и хеш-цепочки.
sha2 = "0.10"
# AES-256-GCM шифрование сегментов at-rest.
aes-gcm = "0.10"
# Argon2id — производный ключ из парольной фразы станции (фолбэк OS-keystore).
argon2 = "0.5"
# Генерация nonce (96 бит) и соли KDF.
rand = "0.8"

# ── Этап 10.1 (playback): вывод звука проигрывателя ────────────────────────────
# Тонкая обвязка над уже используемым cpal для output-стрима (OutputStream/Sink);
# декодер WAV — свой (hound), чтобы держать контроль над усечённым последним
# сегментом и не тянуть встроенные decoder-плагины rodio.
rodio = { version = "0.19", default-features = false }

# ── Этап 06 (sync_agent): возобновляемая чанковая выгрузка в ex_system ────────
# Блокирующий HTTP-клиент: кодовая база синхронно-поточная (watchdog/recovery —
# потоки), Tauri-команды синхронны, parallel_uploads дефолт 1 — async-рантайм
# (tokio) избыточен. rustls вместо OpenSSL — ради кросс-/импортозамещаемой сборки.
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }

# ── Этап 10.2 (export): FLAC-кодирование экспортной копии ─────────────────────
# Чистый Rust, без libFLAC-биндингов — тот же принцип импортозамещения, что у
# hound/rusqlite(bundled)/reqwest(rustls-tls).
flacenc = "0.4"

[dev-dependencies]
# Временный каталог для интеграционного теста конвейера записи.
tempfile = "3"
# Roundtrip-проверка FLAC-энкодера (10.2) в тестах: decode-only, в поставку
# станции не идёт (только `cargo test`).
claxon = "0.4"

[features]
# Параметр по умолчанию для production-сборок Tauri.
custom-protocol = ["tauri/custom-protocol"]
